# nsip-api-client

./: .dockerignore  .gitignore  .mcp.json.README.md  .mcp.json.example  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  Dockerfile  INSTALL.md  LICENSE  Makefile  PROGENY_FIX_ANALYSIS.md  README.md  TEST_COVERAGE_REPORT.md  docker-compose.yml  llms.txt  mcp-server-context.md  pyproject.toml  requirements-dev.txt  run-mcp-server.sh  run_tests_and_coverage.sh  setup.py
.claude/: hooks.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude-plugin/commands/: .gitkeep  discover.md  health.md  lineage.md  lookup.md  profile.md  progeny.md  search.md  test-api.md  traits.md
.claude/commands/nsip/: ancestry.md  breeding-recs.md  ebv-analyzer.md  flock-dashboard.md  flock-import.md  inbreeding.md  mating-plan.md  progeny-report.md  selection-index.md  trait-improvement.md
.claude/plugins/nsip/agents/: shepherd.md
.claude/plugins/nsip/commands/: consult.md  discover.md  health.md  lineage.md  lookup.md  profile.md  progeny.md  search.md  test-api.md  traits.md
.claude/plugins/nsip/hooks/: hooks.json
.claude/plugins/nsip/hooks/scripts/: _config.py  _exceptions.py  _validation.py  api_health_check.py  auto_retry.py  breed_context_injector.py  breeding_report.py  csv_exporter.py  error_notifier.py  fallback_cache.py  lpn_validator.py  nsip_types.py  pedigree_visualizer.py  prompt_analyzer.py  query_logger.py  result_cache.py  trait_dictionary.py
.claude/plugins/nsip/tests/: test-results.json  test_runner.py
.claude/plugins/nsip/tests/integration/: test_error_handling.py  test_workflows.py
.claude/plugins/nsip/tests/unit/: test_pre_tool_use.py  test_user_prompt_submit.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/instructions/: python.instructions.md  skills.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker.yml  manual-release.yml  pr-checks.yml  quality.yml  release.yml  tests.yml
.memory/: index.db
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  RELEASE.md  docker.md  getting-started-guide.md  mcp-configurations.md  mcp-prompts.md  mcp-resources.md  mcp-server.md  nsip-skills.md  shepherd-agent.md
docs/code-review/2025/12/24/: CODE_REVIEW.md  REMEDIATION_TASKS.md  REVIEW_SUMMARY.md
docs/examples/: README.md  complete-workflows.md  prompt-workflows.md  quick-reference.md  resource-templates.md  skill-commands.md  tool-prompts.md
examples/: __init__.py  advanced_search.py  basic_usage.py  mcp-server-use.md
packaging/nsip-client/: README.md  pyproject.toml
packaging/nsip-client/src/: nsip_client
packaging/nsip-mcp-server/: README.md  pyproject.toml
packaging/nsip-mcp-server/src/: nsip_mcp
packaging/nsip-skills/: README.md  pyproject.toml
packaging/nsip-skills/src/: nsip_skills
scripts/: build_packages.py  bump_version.py
specs/001-create-an-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-an-mcp/checklists/: context-efficiency.md  deficiency-report.md  requirements.md
specs/001-create-an-mcp/contracts/: mcp-tools.json
specs/002-using-the-last/: IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING.md  PLANNING_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-using-the-last/checklists/: requirements.md
specs/002-using-the-last/contracts/: plugin-schema.json
src/nsip_client/: __init__.py  cli.py  client.py  exceptions.py  models.py
src/nsip_mcp/: __init__.py  cache.py  cli.py  context.py  errors.py  mcp_tools.py  metrics.py  server.py  tools.py  transport.py
src/nsip_mcp/prompts/: __init__.py  interview_prompts.py  shepherd_prompts.py  skill_prompts.py
src/nsip_mcp/resources/: __init__.py  animal_resources.py  breeding_resources.py  flock_resources.py  static_resources.py
src/nsip_mcp/shepherd/: __init__.py  agent.py  persona.py  regions.py
src/nsip_mcp/shepherd/domains/: __init__.py  breeding.py  calendar.py  economics.py  health.py
src/nsip_skills/: __init__.py  ancestry_builder.py  flock_stats.py  inbreeding.py  mating_optimizer.py  progeny_analysis.py  recommendation_engine.py
src/nsip_skills/common/: formatters.py  nsip_wrapper.py
tests/: __init__.py  conftest.py  nsip_skills_helpers.py  test_cli.py  test_client.py  test_models.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_e2e_workflow.py  test_mcp_workflows.py
tests/plugin/: .gitkeep  marketplace-schema.json  slash-command-schema.json  test_marketplace_json.py  test_plugin_json.py  test_slash_commands.py
tests/unit/: test_cache.py  test_context_manager.py  test_errors.py  test_kb_schema.py  test_knowledge_base.py  test_mcp_cli.py  test_mcp_tools.py  test_metrics.py  test_prompts.py  test_regions.py  test_resources.py  test_server.py  test_shepherd.py  test_transport.py
tests/unit/nsip_skills/: conftest.py  test_ancestry_builder.py  test_common_formatters.py  test_common_models.py  test_common_wrapper.py  test_ebv_analysis.py  test_flock_import.py  test_flock_stats.py  test_inbreeding.py  test_mating_optimizer.py  test_progeny_analysis.py  test_recommendation_engine.py  test_selection_index.py  test_spreadsheet_io.py  test_trait_planner.py
