# Root pyproject.toml - Development tools configuration only
#
# This file does NOT define a package. Individual packages are defined in:
#   - packaging/nsip-client/pyproject.toml
#   - packaging/nsip-mcp-server/pyproject.toml
#
# For development, install both packages in editable mode:
#   pip install -e src/nsip_client -e src/nsip_mcp

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Minimal project section required for tool compatibility
# This does NOT create a distributable package
[project]
name = "nsip-dev-workspace"
version = "0.0.0"
description = "Development workspace for nsip-client and nsip-mcp-server"
requires-python = ">=3.10"

[project.optional-dependencies]
skills = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "gspread>=5.10.0",
    "numpy>=1.24.0",
]
mcp = [
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "requests-mock>=1.11.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "bandit>=1.7.5",
    "build>=1.0.0",
    "twine>=4.0.0",
    "hatchling>=1.18.0",
    # Runtime dependencies for local development
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "fastmcp>=2.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0.0",
    # Skills dependencies for local development
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "gspread>=5.10.0",
    "numpy>=1.24.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

# Hatch build configuration for development workspace
[tool.hatch.build.targets.wheel]
packages = ["src/nsip_client", "src/nsip_mcp", "src/nsip_skills"]

[tool.hatch.build.targets.sdist]
include = [
    "src/nsip_client/**/*.py",
    "src/nsip_mcp/**/*.py",
    "src/nsip_skills/**/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=nsip_client",
    "--cov=nsip_mcp",
    "--cov=nsip_skills",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (OK in tests)
    "S311",   # pseudo-random generators (OK for non-crypto)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # Allow asserts and hardcoded passwords in tests
".claude/*" = ["S101", "S105", "S311"]  # Plugin hooks may use asserts

[tool.bandit]
exclude_dirs = ["tests", ".claude"]
skips = ["B101", "B311"]  # assert_used, pseudo-random (same as ruff ignores)

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "build>=1.0.0",
    "flake8>=6.1.0",
    "hatchling>=1.18.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
    "ruff>=0.14.8",
    "twine>=4.0.0",
    "types-requests>=2.32.4.20250913",
    # Runtime dependencies for local dev
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "fastmcp>=2.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
